Actual fix for background images on mobile

--- a/static/index/css/scrolling-nav.css
+++ b/static/index/css/scrolling-nav.css
@@ -66,7 +66,6 @@ of those sections to manage the look and feel of the site. */
     background: url('../img/tree.jpg');
     background-repeat: no-repeat;
     background-position: 75% center;
-    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -81,7 +80,6 @@ of those sections to manage the look and feel of the site. */
     background: url('../img/bench.jpg');
     background-repeat: no-repeat;
     background-position: 25% center;
-    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -96,7 +94,6 @@ of those sections to manage the look and feel of the site. */
     background: url('../img/bridge.jpg');
     background-repeat: no-repeat;
     background-position: 20% center;
-    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -111,7 +108,6 @@ of those sections to manage the look and feel of the site. */
     background: url('../img/ccc_front.jpg');
     background-repeat: no-repeat;
     background-position: 80% center;
-    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
